[gd_scene load_steps=14 format=3 uid="uid://bolbb3urbmybx"]

[ext_resource type="Script" uid="uid://ddqb8j0gyj6ik" path="res://Scripts/uiScript/end_screen.gd" id="1_4ws7o"]
[ext_resource type="Texture2D" uid="uid://cshlmk0l0egby" path="res://assets/img/newBg.png" id="1_yraj6"]
[ext_resource type="Material" uid="uid://dreh33v4icnaj" path="res://assets/shaders/basicShaderMat.tres" id="3_5k28m"]
[ext_resource type="Texture2D" uid="uid://b0iemuhoii4dd" path="res://assets/shaders/noise_combined.png" id="4_pk1hw"]
[ext_resource type="Shader" uid="uid://dj4rx4p7yo3jk" path="res://assets/shaders/blackScreen.gdshader" id="5_17owq"]

[sub_resource type="Shader" id="Shader_57j11"]
code = "shader_type canvas_item;

uniform sampler2D noise_img : repeat_enable;
uniform vec4 myColor : source_color;
uniform float myOpaq = 0.0;

void fragment() {
	vec2 uv1 = vec2(UV.x + TIME * .1, UV.y);
	vec2 uv2 = vec2(UV.x, UV.y);
	vec2 uv3 = vec2(UV.x, UV.y);

	float noise_r = texture(noise_img, uv1).r;
	float noise_g = texture(noise_img, uv1).g;
	float noise_b = texture(noise_img, uv1).b;


	float newA = noise_r * noise_g * noise_b;

	COLOR.rgb = myColor.rgb;
	COLOR.a = newA * myOpaq * texture(TEXTURE, UV).a;

}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bf3oi"]
shader = SubResource("Shader_57j11")
shader_parameter/noise_img = ExtResource("4_pk1hw")
shader_parameter/myColor = Color(1, 1, 0, 0.854902)
shader_parameter/myOpaq = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_17owq"]
shader = SubResource("Shader_57j11")
shader_parameter/noise_img = ExtResource("4_pk1hw")
shader_parameter/myColor = Color(1, 0.294118, 0, 0.854902)
shader_parameter/myOpaq = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ko2to"]
shader = SubResource("Shader_57j11")
shader_parameter/noise_img = ExtResource("4_pk1hw")
shader_parameter/myColor = Color(0, 1, 0, 0.854902)
shader_parameter/myOpaq = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3gobu"]
shader = SubResource("Shader_57j11")
shader_parameter/noise_img = ExtResource("4_pk1hw")
shader_parameter/myColor = Color(0.85098, 0.65098, 0.572549, 1)
shader_parameter/myOpaq = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jtytr"]
shader = SubResource("Shader_57j11")
shader_parameter/noise_img = ExtResource("4_pk1hw")
shader_parameter/myColor = Color(0, 1, 0.870588, 0.854902)
shader_parameter/myOpaq = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0s3t6"]
shader = ExtResource("5_17owq")
shader_parameter/myColor = Color(0, 0, 0, 1)
shader_parameter/myOpaq = 1.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bf3oi"]
load_path = "res://.godot/imported/grayNoise.png-730593b53f973e0b97b66f8e21379716.s3tc.ctex"

[node name="endScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ws7o")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_yraj6")

[node name="Results" type="Label" parent="."]
material = ExtResource("3_5k28m")
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 269.0
offset_bottom = 117.0
scale = Vector2(1.84916, 1.95115)
theme_override_font_sizes/font_size = 50
text = "Results:"
uppercase = true

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 960.0
offset_right = 105.0
offset_bottom = 991.0
theme_override_constants/outline_size = 20
theme_override_constants/icon_max_width = 100
theme_override_font_sizes/font_size = 50
text = "EXIT"

[node name="Next" type="Button" parent="."]
layout_mode = 0
offset_left = 1656.0
offset_top = 960.0
offset_right = 1746.0
offset_bottom = 991.0
scale = Vector2(2.12936, 2.30118)
text = "Next Level"

[node name="Main" type="AspectRatioContainer" parent="."]
layout_mode = 2
offset_left = 128.0
offset_top = 200.0
offset_right = 963.0
offset_bottom = 570.0
scale = Vector2(1.95701, 1.86333)

[node name="vert" type="VBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="time" type="HBoxContainer" parent="Main/vert"]
layout_mode = 2
theme_override_constants/separation = 650

[node name="Time" type="Label" parent="Main/vert/time"]
material = SubResource("ShaderMaterial_bf3oi")
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "TIME"
uppercase = true

[node name="timeNum" type="Label" parent="Main/vert/time"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0000"
uppercase = true

[node name="wbroke" type="HBoxContainer" parent="Main/vert"]
layout_mode = 2
theme_override_constants/separation = 440

[node name="WallsB" type="Label" parent="Main/vert/wbroke"]
material = SubResource("ShaderMaterial_17owq")
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "WAlls broken"
uppercase = true

[node name="wNum" type="Label" parent="Main/vert/wbroke"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0000"
uppercase = true

[node name="Combo" type="HBoxContainer" parent="Main/vert"]
layout_mode = 2
theme_override_constants/separation = 500

[node name="combo" type="Label" parent="Main/vert/Combo"]
material = SubResource("ShaderMaterial_ko2to")
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "TOP COMBO"

[node name="combNum" type="Label" parent="Main/vert/Combo"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0000"
uppercase = true

[node name="Deaths" type="HBoxContainer" parent="Main/vert"]
layout_mode = 2
theme_override_constants/separation = 588

[node name="Deaths" type="Label" parent="Main/vert/Deaths"]
material = SubResource("ShaderMaterial_3gobu")
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "DEATHS"

[node name="deathNum" type="Label" parent="Main/vert/Deaths"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0000"
uppercase = true

[node name="score" type="HBoxContainer" parent="Main/vert"]
layout_mode = 2
theme_override_constants/separation = 615

[node name="Score" type="Label" parent="Main/vert/score"]
material = SubResource("ShaderMaterial_jtytr")
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "SCORE"

[node name="scoreNum" type="Label" parent="Main/vert/score"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0000"
uppercase = true

[node name="blackScreen" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_0s3t6")
position = Vector2(959.875, 540.125)
scale = Vector2(0.937622, 0.527222)
texture = SubResource("CompressedTexture2D_bf3oi")

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
